fix issues with zero,  result overflow

--- a/styles.css
+++ b/styles.css
@@ -27,24 +27,16 @@ body {
     height: 120px;
     width: 100%;
     margin-bottom: 20px;
-    position: relative;
     overflow: hidden;
+    position: relative;
 }
 
-.total-amount {
-    font-size: 1.5rem;
-    color: black;
-    opacity: 0.5;
-    position: absolute;
-    top: 10px;
-    right: 25px;
-}
-
-.expression {
+.result {
+    height: 50px;
     font-size: 2.5rem;
     position: absolute;
-    bottom: 20px;
     right: 20px;
+    white-space: nowrap;
 }
 
 .display-container,
@@ -72,6 +64,9 @@ body {
     height: 70px;
     cursor: pointer;
     transition: background-color 50ms ease-in;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 .button:hover, 
@@ -79,7 +74,7 @@ body {
     background-color: #d4d4d4;
 }
 
-.button:active 
+.button:active,
 #equals:active {
     background-color: #b3b3b3;
 }
